--- a/Tool/archived/env.example
+++ b/Tool/archived/env.example
@@ -12,12 +12,16 @@ CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
+# Logo Image URL (for sharing and branding)
+LOGO_IMAGE=https://res.cloudinary.com/your-cloud/image/upload/logo.png
+
 # Email (Nodemailer)
 EMAIL_USER=your_email@gmail.com
 EMAIL_PASS=your_app_password
 
 # Frontend URL (for CORS)
-FRONTEND_URL=http://192.168.1.9:8081
+FRONTEND_URL=http://localhost:8081
+API_BASE_URL=http://localhost:3000
 
 # Redis Configuration (for background jobs)
 REDIS_HOST=localhost
@@ -25,6 +29,11 @@ REDIS_PORT=6379
 REDIS_PASSWORD=
 ENABLE_BACKGROUND_JOBS=false
 
+# Google OAuth Configuration
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 GOOGLE_REDIRECT_URI=your_google_redirect_uri
+
+# WebSocket Configuration
+WS_ALLOWED_ORIGIN=http://localhost:19006
+WS_PATH=/socket.io
