--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "update-config": "node scripts/update-app-json.js",
+    "prestart": "npm run update-config"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
